# ChangeLog for games-arcade/ppracer
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/ppracer/Attic/ChangeLog,v 1.12 2005/11/29 21:47:47 hanno Exp $

  29 Nov 2005; Hanno Boeck <hanno@gentoo.org>
  +files/ppracer-0.3.1-gcc41.patch, ppracer-0.3.1.ebuild:
  Fix for gcc 4.1.

  14 Nov 2005; Herbie Hopkins <herbs@gentoo.org> ppracer-0.3.1.ebuild:
  Multilib fix

  01 Sep 2005; <dang@gentoo.org> ppracer-0.3.1.ebuild:
  Marked stable on amd64

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> ppracer-0.3.1.ebuild:
  Stable on ppc.

*ppracer-0.3.1 (01 Mar 2005)

  01 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> +ppracer-0.3.1.ebuild:
  version bump

  22 Feb 2005; David Holm <dholm@gentoo.org> ppracer-0.3.ebuild:
  Added to ~ppc.

*ppracer-0.3 (03 Feb 2005)

  03 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> +ppracer-0.3.ebuild:
  version bump

  27 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> ppracer-0.2.3.ebuild:
  added ~amd64 to KEYWORDS. fixes #79698

  21 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org> -ppracer-0.2.1.ebuild,
  -ppracer-0.2.2.ebuild:
  clean old ebuilds

*ppracer-0.2.3 (19 Jan 2005)

  19 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org> +ppracer-0.2.3.ebuild:
  version bump

*ppracer-0.2.2 (28 Dec 2004)

  28 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +ppracer-0.2.2.ebuild:
  version bump

*ppracer-0.2.1 (15 Dec 2004)

  15 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +ppracer-0.2.1.ebuild:
  initial commit - ebuild submitted by eGore via bug #66503
