@@ -1,8 +1,8 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/ppracer/Attic/ppracer-0.3.1.ebuild,v 1.6 2005/11/29 21:47:47 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/ppracer/Attic/ppracer-0.3.1.ebuild,v 1.7 2006/01/09 23:14:22 wolf31o2 Exp $
 
-inherit flag-o-matic gnuconfig games multilib
+inherit flag-o-matic gnuconfig eutils multilib games
 
 DESCRIPTION="take on the role of Tux, the Linux Penguin, as he races down steep, snow-covered mountains"
 HOMEPAGE="http://developer.berlios.de/projects/ppracer/"
