@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/ppracer
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/ppracer/Attic/ChangeLog,v 1.12 2005/11/29 21:47:47 hanno Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/ppracer/Attic/ChangeLog,v 1.13 2006/01/09 23:14:22 wolf31o2 Exp $
+
+  09 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> ppracer-0.3.1.ebuild:
+  Added eutils to inherit line and moved games to the end of the line.
 
   29 Nov 2005; Hanno Boeck <hanno@gentoo.org>
   +files/ppracer-0.3.1-gcc41.patch, ppracer-0.3.1.ebuild:
